--- a/client/src/App.css
+++ b/client/src/App.css
@@ -22,3 +22,25 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+.div-form{
+  margin:10px auto;
+  width:50%
+}
+.div-form input{
+    width: 100%;
+    padding: 12px;
+    margin:10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    resize: vertical;
+}
+.div-form button {
+  background-color: #4CAF50;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  float: right;
+}
